# gas_station_spain

./: LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: main.yml
custom_components/gas_station_spain/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/gas_station_spain/lib/: gas_stations_api.py
custom_components/gas_station_spain/translations/: en.json  es.json
custom_components/ha_gas_station_spain/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/ha_gas_station_spain/translations/: en.json  es.json  pt.json
